Adding cucumber dependencies into pom file and setting up maven-surefire-plugin